TG-86: Fix problem with Modal width not fitting the whole content

--- a/src/Components/Shared/Modal/modal.module.css
+++ b/src/Components/Shared/Modal/modal.module.css
@@ -11,7 +11,7 @@
   }
 
   .modal, .errorModal, .successModal  {
-    width: 300px;
+    max-width: 400px;
     position: relative;
     border-radius: 7px;
     display: flex;
